--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
     "modular",
     "productivity"
   ],
-  "repository": "https://github.com/Agunivers/tgbot7",
+  "repository": "https://github.com/Agunivers7/tgbot7",
   "env": {
     "ENV": {
       "description": "Setting this to ANYTHING will enable env variables. But, you need to understand the code to know what to set here!",
